--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 
 
@@ -19,6 +20,7 @@
     <circle cx="1" cy="3" r="10" fill="gold"/>
     <circle cx="50" cy="3" r="10" fill="gold"/>
     <circle cx="100" cy="3" r="10" fill="gold"/>
+
    </svg>
     
     
